# forecaster-enterprise

./: .cursorrules  .env.example  .env.template  .gitignore  CLIENT_PRESENTATION.md  DEPLOYMENT_GUIDE.md  README.md  SECURITY_IMPROVEMENTS.md  docker-compose.dev.yml  docker-compose.stage.with-db.yml  docker-compose.stage.yml  docker-compose.yml  package.json  pytest.ini  vercel.json
backend/: .dockerignore  .env.example  COVERAGE_REPORT.md  Dockerfile  IMPLEMENTATION_STATUS.md  SECURITY_ANALYSIS.md  config.py  coverage.xml  create_user.py  docker-entrypoint.sh  list_users.py  main.py  make_admin.py  pyproject.toml  pyrightconfig.json  setup.sh  start.sh  test_endpoints.sh  test_forecast_accuracy.py
backend/api/: __init__.py  auth.py  data.py  etl.py  forecast.py  inventory.py  locations.py  monitoring.py  orders.py  purchase_orders.py  settings.py  simulation.py  suppliers.py
backend/auth/: .gitkeep  __init__.py  dependencies.py  jwt.py  security.py  security_logger.py  service_auth.py
backend/core/: monitoring.py  rate_limit.py
backend/forecasting/: __init__.py
backend/forecasting/applications/: __init__.py
backend/forecasting/core/: __init__.py  tenant_manager.py
backend/forecasting/modes/: __init__.py  factory.py
backend/forecasting/services/: __init__.py  data_access.py  data_audit.py  data_validator.py  forecast_service.py  quality_calculator.py  sku_classifier.py
backend/forecasting/validation/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 056e67f57114_add_sku_classifications_table.py  1a2b3c4d5e6f_add_location_id_to_ts_demand_daily.py  1c314965ad1c_add_performance_indexes_for_forecasting.py  269603316338_add_inventory_management_tables.py  38c1879adfce_add_audit_metadata_to_forecast_runs.py  63bc2efb58b6_add_ts_demand_daily_table.py  84f50d6e2ed1_initial_migration_users_table.py  881cd10fab75_merge_all_heads.py  8a8ce391936a_add_forecast_tables.py  92b51207e018_add_stock_at_end_of_day_to_ts_demand_.py  95dfb658e5b7_optimize_ts_demand_daily_for_forecasting.py  9b2f3c4d5e6a_add_clients_table.py  9c3d4e5f6a7b_add_client_id_to_users.py  a89cac7ecb0b_add_order_cart_table.py  c9152349e312_add_user_preferences.py  e712f3443d94_merge_branches.py  e77423d5d0bd_make_forecast_runs_user_id_nullable.py  f1a2b3c4d5e6_add_supplier_defaults.py  g2b3c4d5e6f7_add_product_buffer.py
backend/models/: __init__.py  client.py  database.py  forecast.py  inventory_metrics.py  location.py  order_cart.py  product.py  product_supplier.py  purchase_order.py  settings.py  stock.py  supplier.py  user.py
backend/reports/: COMPREHENSIVE_MODEL_COMPARISON.md  README.md  ma7_vs_chronos2_ay_20251209_112817.csv  method_routing_validation_20251209_113216.csv  method_routing_validation_20251209_113238.csv  model_comparison_all_skus_20251209_105318.csv  model_comparison_all_skus_20251209_105346.csv  sba_test_results_20251209_111123.csv
backend/reports/archive/: DARTS_LEARNINGS_SUMMARY.md  DARTS_VS_OURS_COMPARISON.md  FORECAST_COMPARISON_TABLE.md  IMPLEMENTATION_VALIDATION.md  (+9 more)
backend/schemas/: auth.py  etl.py  forecast.py  inventory.py  location.py  monitoring.py  order.py  settings.py  simulation.py  supplier.py
backend/scripts/: README.md  __init__.py  analyze_sku_patterns.py  build_local_seed.sh  check_data_completeness.py  check_demand_patterns.py  check_inventory_data.py  classify_m5_skus.py  cleanup_phase1.sh  comprehensive_model_comparison.py  comprehensive_model_comparison_all_skus.py  diagnose_ay_data.py  diagnose_ay_with_darts.py  download_m5_data.py  generate_api_reference.py  generate_recent_sales_data.py  import_csv_to_ts_demand_daily.py  investigate_ay_performance.py  manual_forecast_test.py  populate_historical_stock.py  push_seed_to_supabase.sh  reclassify_with_new_ranges.py  refresh_inventory_metrics.py  reset_test_data.py  review_and_cleanup.py  security_audit.py  seed_supabase_demo.sh  setup_demo_client.py  setup_kaggle_token.sh  setup_multi_client_test.py  setup_test_data.py  shift_dates_to_recent.py  test_all_apis.py  test_classification_endpoint.py  test_dashboard_error.py  test_error_handling.py  test_forecast_accuracy.py  test_integration.py  test_m5_forecast_accuracy.py  test_ma7_vs_chronos2_ay.py  (+7 more)
backend/services/: auth_service.py  cart_service.py  dashboard_service.py  data_validation_service.py  inventory_metrics_service.py  inventory_service.py  location_service.py  metrics_service.py  purchase_order_service.py  recommendations_service.py  simulation_service.py  supplier_service.py  user_service.py
backend/tests/: conftest.py  test_api_auth.py  test_auth_dependencies.py  test_auth_service.py  test_core_rate_limit.py  test_forecast_accuracy.py  test_integration_workflows.py  test_user_service.py
(+527 files in other folders)
