[project]
name = "forecaster-enterprise-backend"
version = "0.1.0"
description = "Forecaster Enterprise Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter
    "alembic>=1.13.0",  # Database migrations
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.12.12",
    "mypy>=1.17.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "I", "B006"]
ignore = ["E501"]
fixable = ["ALL"]
exclude = ["*.ipynb"]

